--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ EMAIL_PASS=hmvl qbwf rjdj orua
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
+MONGO_URI=mongodb+srv://adibmahi14:FnCt3aLRZozqB9Q0@bd-turntable.ctdt44i.mongodb.net/?retryWrites=true&w=majority&appName=bd-turntable
 
-MONGO_URI=mongodb+srv://adibmahi14:669098%40%40%40@turntable-cluster.pfuacqz.mongodb.net/turntable?retryWrites=true&w=majority
