--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ EMAIL_PASS=hmvl qbwf rjdj orua
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-MONGO_URI=mongodb+srv://adibmahi14:FnCt3aLRZozqB9Q0@bd-turntable.ctdt44i.mongodb.net/?retryWrites=true&w=majority&appName=bd-turntable
+MONGO_URI=mongodb+srv://adibmahi14:FnCt3aLRZozqB9Q0@bd-turntable.ctdt44i.mongodb.net/turntable-bd?retryWrites=true&w=majority&appName=bd-turntable
+
 
