--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ EMAIL_PASS=hmvl qbwf rjdj orua
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
+
 MONGO_URI=mongodb+srv://adibmahi14:FnCt3aLRZozqB9Q0@bd-turntable.ctdt44i.mongodb.net/turntable-bd?retryWrites=true&w=majority&appName=bd-turntable
 
+JWT_SECRET=x7Sm$&%ex5
 
